--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "Discord",
     "Bot"
   ],
-  "author": "Harry Cameron <hcphoon01@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hcphoon01/VATBot/issues"
@@ -27,7 +26,8 @@
     "dotenv": "^8.2.0",
     "klasa": "github:dirigeants/klasa#master",
     "request": "^2.88.0",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "vatsim-data-handler": "^2.0.0"
   },
   "devDependencies": {
     "node-dev": "^4.0.0"
