--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "homepage": "https://github.com/hcphoon01/VATBot#readme",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "csv-parser": "^2.3.2",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
+    "fs-nextra": "^0.4.7",
     "klasa": "github:dirigeants/klasa#master",
     "request": "^2.88.0",
     "sequelize": "^5.21.3",
+    "sqlite": "^3.0.3",
     "vatsim-data-handler": "^2.0.0"
   },
   "devDependencies": {
