--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/hcphoon01/VATBot#readme",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "bluebird": "^3.7.2",
     "csv-parser": "^2.3.2",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
@@ -30,6 +31,7 @@
     "request": "^2.88.0",
     "sequelize": "^5.21.3",
     "sqlite": "^3.0.3",
+    "sqlite3": "^4.1.1",
     "vatsim-data-handler": "^2.0.0"
   },
   "devDependencies": {
