added dev script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Discord Bot for the VATSIM Network",
   "main": "src/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node-dev bot.js"
   },
   "repository": {
     "type": "git",
