--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "sequelize": "^5.21.3",
     "sqlite": "^3.0.3",
     "sqlite3": "^4.1.1",
-    "vatsim-data-handler": "^2.0.0"
+    "vatsim-data-handler": "^3.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
     "node-dev": "^4.0.0"
   }
 }
