--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.4.7",
     "klasa": "github:dirigeants/klasa#settings",
+    "moment": "^2.24.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.3",
     "sqlite": "^3.0.3",
