--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "better-sqlite3": "^6.0.1",
     "bluebird": "^3.7.2",
     "csv-parser": "^2.3.2",
-    "discord.js": "github:discordjs/discord.js#master",
+    "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.4.7",
-    "klasa": "github:dirigeants/klasa#settings",
+    "klasa": "github:dirigeants/klasa#master",
     "leaflet-image": "^0.4.0",
     "moment": "^2.24.0",
     "request": "^2.88.2",
