--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "better-sqlite3": "^6.0.1",
     "bluebird": "^3.7.2",
     "csv-parser": "^2.3.2",
+    "csvtojson": "^2.0.10",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.4.7",
