--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.4.7",
     "klasa": "github:dirigeants/klasa#master",
+    "klasa-dashboard-hooks": "github:dirigeants/klasa-dashboard-hooks",
     "leaflet-image": "^0.4.0",
     "moment": "^2.24.0",
     "request": "^2.88.2",
