--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "discord.js-menu": "^2.3.1",
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.5.1",
+    "log-timestamp": "^0.3.0",
     "moment": "^2.29.1",
     "request": "^2.88.2",
     "sequelize": "^6.5.0",
