--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "bluebird": "^3.7.2",
     "common-tags": "^1.8.0",
     "csv-parser": "^3.0.0",
-    "csvtojson": "^2.0.10",
     "db-migrate": "^0.11.12",
     "db-migrate-sqlite3": "^0.4.0",
     "discord-akairo": "github:discord-akairo/discord-akairo",
@@ -34,10 +33,8 @@
     "discord.js-menu": "^2.3.1",
     "dotenv": "^8.2.0",
     "fs-nextra": "^0.5.1",
-    "log-timestamp": "^0.3.0",
     "moment": "^2.29.1",
     "request": "^2.88.2",
-    "sequelize": "^6.5.0",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.2",
     "vatsim-data-handler": "^5.0.2"
@@ -45,7 +42,6 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.21.0",
-    "node-dev": "^6.4.0",
-    "sequelize-cli": "^6.2.0"
+    "node-dev": "^6.4.0"
   }
 }
