--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/hcphoon01/VATBot#readme",
   "dependencies": {
+    "@turf/boolean-intersects": "^6.3.0",
     "@turf/turf": "^6.3.0",
     "ascii-table": "0.0.9",
     "bluebird": "^3.7.2",
